[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GUI/GameInfoUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GUI/gui.gd" type="Script" id=2]
[ext_resource path="res://Assets/Theme/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Fonts/OutlineMenuTitleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/SolidMenuTitleFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Characters/Blue/Front.png" type="Texture" id=6]
[ext_resource path="res://Scenes/GUI/EscapeMenu.gd" type="Script" id=7]
[ext_resource path="res://Assets/Characters/Orange/Front.png" type="Texture" id=8]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="VBoxContainer" parent="Container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameInfoUI" parent="Container/HUD" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1004.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controls" type="HBoxContainer" parent="Container/HUD"]
margin_top = 557.0
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 2
custom_constants/separation = 20

[node name="PlayButton" type="Button" parent="Container/HUD/Controls"]
margin_right = 60.0
margin_bottom = 23.0
rect_min_size = Vector2( 60, 0 )
text = "Pause"

[node name="Timeline" type="HSlider" parent="Container/HUD/Controls"]
margin_left = 80.0
margin_right = 1004.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EscapeMenu" type="PopupPanel" parent="Container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 510.0
margin_bottom = 408.0
rect_min_size = Vector2( 500, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Container/EscapeMenu"]
margin_left = 2.0
margin_top = 2.0
margin_right = 498.0
margin_bottom = 396.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container/EscapeMenu/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 384.0

[node name="SolidTitle" type="Label" parent="Container/EscapeMenu/MarginContainer/VBoxContainer"]
margin_right = 476.0
margin_bottom = 51.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.870588, 0.662745, 0.364706, 1 )
text = "Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutlineTitle" type="Label" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/SolidTitle"]
margin_right = 476.0
margin_bottom = 51.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.560784, 0.294118, 0.0588235, 1 )
text = "Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scoreboard" type="MarginContainer" parent="Container/EscapeMenu/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 476.0
margin_bottom = 320.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard"]
margin_top = 10.0
margin_right = 476.0
margin_bottom = 255.0

[node name="ScoreContainer" type="HBoxContainer" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer"]
margin_left = 109.0
margin_right = 367.0
margin_bottom = 245.0
alignment = 1

[node name="Player1" type="VBoxContainer" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer/ScoreContainer"]
margin_right = 100.0
margin_bottom = 245.0

[node name="TextureRect" type="TextureRect" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer/ScoreContainer/Player1"]
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 200 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer/ScoreContainer/Player1"]
margin_top = 204.0
margin_right = 100.0
margin_bottom = 245.0
size_flags_horizontal = 3
text = "Player 1: $100"
align = 1
autowrap = true
max_lines_visible = 2

[node name="Spacer" type="MarginContainer" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer/ScoreContainer"]
margin_left = 104.0
margin_right = 154.0
margin_bottom = 245.0
custom_constants/margin_right = 50

[node name="Player2" type="VBoxContainer" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer/ScoreContainer"]
margin_left = 158.0
margin_right = 258.0
margin_bottom = 245.0

[node name="TextureRect" type="TextureRect" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer/ScoreContainer/Player2"]
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 200 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Container/EscapeMenu/MarginContainer/VBoxContainer/Scoreboard/CenterContainer/ScoreContainer/Player2"]
margin_top = 204.0
margin_right = 100.0
margin_bottom = 245.0
size_flags_horizontal = 3
text = "Player 2: $100"
align = 1
autowrap = true
max_lines_visible = 2

[node name="ExitToTitle" type="Button" parent="Container/EscapeMenu/MarginContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 476.0
margin_bottom = 347.0
size_flags_vertical = 0
text = "Exit to Title"

[node name="ExitToDesktop" type="Button" parent="Container/EscapeMenu/MarginContainer/VBoxContainer"]
margin_top = 351.0
margin_right = 476.0
margin_bottom = 374.0
size_flags_vertical = 0
text = "Exit to Desktop"

[connection signal="pressed" from="Container/HUD/Controls/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="value_changed" from="Container/HUD/Controls/Timeline" to="." method="_on_Timeline_value_changed"]
[connection signal="pressed" from="Container/EscapeMenu/MarginContainer/VBoxContainer/ExitToTitle" to="Container/EscapeMenu" method="_on_ExitToTitle_pressed"]
[connection signal="pressed" from="Container/EscapeMenu/MarginContainer/VBoxContainer/ExitToDesktop" to="Container/EscapeMenu" method="_on_ExitToDesktop_pressed"]
